<resources>
    <string name="app_name">Ernest_app</string>
    <string name="welcome_message">Ласкаво просимо,\n%s!</string>
    <string name="login_counter">Залишено автоматичних входів: %d</string>
    <string name="logout_button">Вийти з акаунту</string>
    <string name="close_app_button">Закрити додаток</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="password_show">Показати Пароль</string>
    <string name="login_button">Увійти</string>
    <string name="register_button">Реєстрація</string>
    <string name="registered_users">Зареєстровані користувачі: %s</string>
    <string name="auto_login_checkbox">Автоматичний вхід</string>
    <string name="delete_account">Видалити акаунт</string>
    <string name="sign_with_label">or sign with</string>


    <string name="facebook_app_id">1374430250576509</string>
    <string name="fb_login_protocol_scheme">fb1374430250576509</string>
    <string name="facebook_client_token"> b2827de0a33ae92930bc2800e5c283de</string>
    </resources>